ICE-7817 - IE required vertical alignment rule had negative effects on the correct alignment in Chrome. Restricting rule application to IE, and other minor CSS tweaks.

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/tree/tree.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/tree/tree.css
@@ -1,5 +1,6 @@
 .if-tree {
     display: inline-block;
+    padding-bottom:5px;
 }
 
 .if-node {
@@ -16,7 +17,7 @@
 .if-node-wrp > *:first-child {
     /* IE fix, vert align doesn't appear to inherit */
     /* or default behaviour differs. */
-    vertical-align: middle;
+    vertical-align: middle\9; /* IE9 and lower */
 }
 
 .if-node-cnt {
